fixed overflow problem with z-index yaaaaaaaay

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-/*Color pallette: https://coolors.co/6290c3-004ba8-067bc2-0a369d-cfdee7*/
+/*Color pallette: 004ba8 - Deep blue
+d6e9ff - lighter shade */
 
 /*Begin header styles*/
 
@@ -35,15 +36,40 @@
 
 /*Begin Navbar styles*/
 
+
+
+.affix {
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+
+.affix + .main-container {
+  padding-top: 52px;
+}
+
+
+
+
+
+.clear-fix:after {
+   content: " "; /* Older browser do not support empty content */
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+ }
+
 .navbar-default {
   border-color: #d6e9ff;
-  position: sticky;
-  top: 0px;
+  /*position: sticky;
+  top: 0px;*/
   font-family: "Raleway", sans-serif;
 }
 
 .nav-container {
   background-color: #004ba8;
+
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -83,9 +109,29 @@
 
 /*End Navbar styles*/
 
-.body-test {
-  height: 1200px;
-  width: 100%;
+/* Trying a fix for elements in a row overriding sticky by creating a second empty sticky as a buffer */
+
+
+
+/*Begin Thumbnail Styles */
+
+.caption-text {
+  font-size: 48px;
+  font-family: "Raleway", sans-serif;
 }
+
+.blue-bar {
+  height: 5px;
+  width: 100%;
+  background-color: #004ba8;
+  margin-bottom: 25px;
+}
+
+/*.thumbnail {
+  margin-top: 25px;
+}*/
+
+/*End Thumbnail Styles */
+
 
 /*Media Queries*/
